# pl-pipeline-standalone

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  MIGRATION.md  MIGRATION_CHECKLIST.md  MVP_STATUS.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  VERSION  install.sh
examples/demo-fastapi-users/: .gitignore  .pl-adapter.yaml  README.md  pyproject.toml
examples/demo-fastapi-users/.codebuddy/agents/: fastapi-architect.md
examples/demo-fastapi-users/.codebuddy/rules/: api-error-handling.md  fastapi-conventions.md  fastapi-depends-pass-callable.md  fastapi-no-sync-blocking-in-async.md  python-typing-strict.md
examples/demo-fastapi-users/app/: __init__.py  db.py  deps.py  errors.py  main.py  security.py  settings.py
examples/demo-fastapi-users/app/api/: __init__.py
examples/demo-fastapi-users/app/api/v1/: __init__.py  auth.py  (+1 more)
examples/demo-fastapi-users/app/models/: __init__.py  user.py
examples/demo-fastapi-users/app/repositories/: __init__.py  user_repo.py
examples/demo-fastapi-users/app/schemas/: __init__.py  common.py  user.py
examples/demo-fastapi-users/app/services/: __init__.py  user_service.py
examples/demo-fastapi-users/pl/contracts/: _registry.yaml  add-users-api.consumed.yaml
examples/demo-fastapi-users/pl/templates/: plan.md  taskdag.md
examples/demo-fastapi-users/scripts/: adapter-python-fastapi-build.sh  adapter-python-fastapi-lint.sh  adapter-python-fastapi-verify.sh
examples/demo-fastapi-users/tests/: conftest.py
examples/demo-fastapi-users/tests/api/: __init__.py  test_users.py
(+400 files in other folders)
