[project]
name = "demo-fastapi-users"
version = "0.0.1"
description = "pl-pipeline adapter-python-fastapi end-to-end example"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.5",
  "pydantic-settings>=2.2",
  "sqlalchemy[asyncio]>=2.0.27",
  "aiosqlite>=0.20",
  "uvicorn[standard]>=0.29",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3",
  "email-validator>=2.1",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "pytest-cov>=5",
  "ruff>=0.4",
  "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
